--- a/restaurant/menus/a-la-francaise.html
+++ b/restaurant/menus/a-la-francaise.html
@@ -54,7 +54,8 @@
                             Tartare de poulpe acidulé
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Aux zestes d'orange </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Aux zestes d'orange
+                            </p>
                             <p class="main__menu__commande__article__detail__prix">25€</p>
                         </div>
                     </div>
@@ -73,7 +74,8 @@
                             Velouté de légumes d'antan
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Carotte, panais, topinambour
+                            <p class="main__menu__commande__article__detail__description truncate"> Carotte, panais,
+                                topinambour
                             </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
                         </div>
@@ -93,7 +95,7 @@
                             Soupe à l'oignon
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Revisitée
+                            <p class="main__menu__commande__article__detail__description truncate"> Revisitée
                             </p>
                             <p class="main__menu__commande__article__detail__prix">20€</p>
                         </div>
@@ -124,7 +126,8 @@
                             Coquilles Saint-Jacques
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Accompagnées d'une purée de
+                            <p class="main__menu__commande__article__detail__description truncate"> Accompagnées d'une
+                                purée de
                                 panais </p>
                             <p class="main__menu__commande__article__detail__prix">40€</p>
                         </div>
@@ -143,7 +146,8 @@
                             Magret de canard
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et parmentier de pommes de
+                            <p class="main__menu__commande__article__detail__description truncate"> Et parmentier de
+                                pommes de
                                 terre
                             </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
@@ -163,7 +167,8 @@
                             Pigeonneau d’Ille-et-Vilaine
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Sur son lit de gnocchis aux
+                            <p class="main__menu__commande__article__detail__description truncate"> Sur son lit de
+                                gnocchis aux
                                 légumes </p>
                             <p class="main__menu__commande__article__detail__prix">44€</p>
                         </div>
@@ -193,7 +198,8 @@
                             Pétales de violettes glacés
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et purée de noisettes </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Et purée de
+                                noisettes </p>
                             <p class="main__menu__commande__article__detail__prix">18€</p>
                         </div>
                     </div>
@@ -211,7 +217,7 @@
                             Fondant au chocolat
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Revisité </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Revisité </p>
                             <p class="main__menu__commande__article__detail__prix">22€</p>
                         </div>
                     </div>
@@ -229,7 +235,8 @@
                             Millefeuille croustillant
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Myrtilles et pâte d’amande
+                            <p class="main__menu__commande__article__detail__description truncate"> Myrtilles et pâte
+                                d’amande
                             </p>
                             <p class="main__menu__commande__article__detail__prix">23€</p>
                         </div>
