--- a/restaurant/menus/delice-des-sens.html
+++ b/restaurant/menus/delice-des-sens.html
@@ -53,7 +53,8 @@
                             Tartare de thon
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Assaisonné au yuzu </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Assaisonné au yuzu
+                            </p>
                             <p class="main__menu__commande__article__detail__prix">25€</p>
                         </div>
                     </div>
@@ -72,7 +73,8 @@
                             Bouchée de homard croustillant
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et sa farandole de petits
+                            <p class="main__menu__commande__article__detail__description truncate"> Et sa farandole de
+                                petits
                                 légumes
                             </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
@@ -93,7 +95,8 @@
                             Poulet rôti aux herbes de Provence
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et sa crème de truffe
+                            <p class="main__menu__commande__article__detail__description truncate"> Et sa crème de
+                                truffe
                             </p>
                             <p class="main__menu__commande__article__detail__prix">40€</p>
                         </div>
@@ -124,7 +127,8 @@
                             Poulet rôti aux herbes de Provence
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et sa crème de truffe </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Et sa crème de
+                                truffe </p>
                             <p class="main__menu__commande__article__detail__prix">40€</p>
                         </div>
                     </div>
@@ -142,7 +146,8 @@
                             Langouste rôtie
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et ses légumes de saison </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Et ses légumes de
+                                saison </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
                         </div>
                     </div>
@@ -160,7 +165,8 @@
                             Côte de bœuf Angus
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et sa purée de panais </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Et sa purée de
+                                panais </p>
                             <p class="main__menu__commande__article__detail__prix">44€</p>
                         </div>
                     </div>
@@ -189,7 +195,7 @@
                             Farandole de desserts
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Du chef</p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Du chef</p>
                             <p class="main__menu__commande__article__detail__prix">18€</p>
                         </div>
                     </div>
@@ -207,7 +213,7 @@
                             Crème brulée
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Revisitée </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Revisitée </p>
                             <p class="main__menu__commande__article__detail__prix">22€</p>
                         </div>
                     </div>
@@ -225,7 +231,7 @@
                             Tiramisu
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> À la noisette</p>
+                            <p class="main__menu__commande__article__detail__description truncate"> À la noisette</p>
                             <p class="main__menu__commande__article__detail__prix">23€</p>
                         </div>
                     </div>
