--- a/restaurant/menus/note-enchante.html
+++ b/restaurant/menus/note-enchante.html
@@ -53,7 +53,8 @@
                             Ravioles de foie gras
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description">Accompagnées de leur crème à
+                            <p class="main__menu__commande__article__detail__description truncate">Accompagnées de leur
+                                crème à
                                 la
                                 truffe </p>
                             <p class="main__menu__commande__article__detail__prix">25€</p>
@@ -74,7 +75,8 @@
                             Caviar osciètre
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Sur blini à la farine de blé
+                            <p class="main__menu__commande__article__detail__description truncate"> Sur blini à la
+                                farine de blé
                                 noir
                             </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
@@ -94,7 +96,8 @@
                         <h3 class="main__menu__commande__article__title">
                             Homard et espuma de potiron </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description">Marinés aux zestes d'orange
+                            <p class="main__menu__commande__article__detail__description truncate">Marinés aux zestes
+                                d'orange
                             <p class="main__menu__commande__article__detail__prix">20€</p>
                         </div>
                     </div>
@@ -112,7 +115,8 @@
                         <h3 class="main__menu__commande__article__title">
                             Foie gras de canard cuit entier </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description">Confiture de figue et pain
+                            <p class="main__menu__commande__article__detail__description truncate">Confiture de figue et
+                                pain
                                 toasté
                             <p class="main__menu__commande__article__detail__prix">35€</p>
                         </div>
@@ -143,7 +147,7 @@
                             Noix de coquilles Saint-Jacques
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Sur lit de purée de
+                            <p class="main__menu__commande__article__detail__description truncate"> Sur lit de purée de
                                 céleri-rave
                             </p>
                             <p class="main__menu__commande__article__detail__prix">40€</p>
@@ -163,7 +167,8 @@
                             Langoustine poêlée
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description">Purée de patate douce </p>
+                            <p class="main__menu__commande__article__detail__description truncate">Purée de patate douce
+                            </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
                         </div>
                     </div>
@@ -181,7 +186,8 @@
                             Mijoté de queue de bœuf
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et riz sauvage aux zestes de
+                            <p class="main__menu__commande__article__detail__description truncate"> Et riz sauvage aux
+                                zestes de
                                 citron </p>
                             <p class="main__menu__commande__article__detail__prix">45€</p>
                         </div>
@@ -211,7 +217,8 @@
                             Macaron noisette et chocolat
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Glace au caramel brun et sel
+                            <p class="main__menu__commande__article__detail__description truncate"> Glace au caramel
+                                brun et sel
                                 de
                                 Guérande </p>
                             <p class="main__menu__commande__article__detail__prix">18€</p>
@@ -231,7 +238,8 @@
                             Baba au rhum revisité
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Avec son coulis de citron
+                            <p class="main__menu__commande__article__detail__description truncate"> Avec son coulis de
+                                citron
                             </p>
                             <p class="main__menu__commande__article__detail__prix">22€</p>
                         </div>
@@ -250,7 +258,7 @@
                             Tarte au citron meringuée
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Déstructurée </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Déstructurée </p>
                             <p class="main__menu__commande__article__detail__prix">23€</p>
                         </div>
                     </div>
