--- a/restaurant/menus/palette-du-gout.html
+++ b/restaurant/menus/palette-du-gout.html
@@ -53,7 +53,8 @@
                             Fricassée d'escargots
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Au piment d'Espelette </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Au piment
+                                d'Espelette </p>
                             <p class="main__menu__commande__article__detail__prix">25€</p>
                         </div>
                     </div>
@@ -72,7 +73,8 @@
                             Foie gras de canard mi-cuit
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et ses copeaux de truffe
+                            <p class="main__menu__commande__article__detail__description truncate"> Et ses copeaux de
+                                truffe
                                 noire
                             </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
@@ -92,7 +94,8 @@
                         <h3 class="main__menu__commande__article__title">
                             Œuf au plat </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Assaisonné à la truffe sur
+                            <p class="main__menu__commande__article__detail__description truncate"> Assaisonné à la
+                                truffe sur
                                 lit de
                                 caviar </p>
                             <p class="main__menu__commande__article__detail__prix">20€</p>
@@ -124,7 +127,8 @@
                             Filet de bœuf aux herbes
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Accompagné de sa ribambelle
+                            <p class="main__menu__commande__article__detail__description truncate"> Accompagné de sa
+                                ribambelle
                                 de
                                 légumes </p>
                             <p class="main__menu__commande__article__detail__prix">40€</p>
@@ -144,7 +148,8 @@
                             Parmentier de queue de bœuf
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> À la truffe noire sur sa
+                            <p class="main__menu__commande__article__detail__description truncate"> À la truffe noire
+                                sur sa
                                 purée de
                                 panais </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
@@ -164,7 +169,7 @@
                             Filet de turbot
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Aux agrumes </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Aux agrumes </p>
                             <p class="main__menu__commande__article__detail__prix">44€</p>
                         </div>
                     </div>
@@ -193,7 +198,7 @@
                             Paris-Brest
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Revisité </p>
+                            <p class="main__menu__commande__article__detail__description truncate"> Revisité </p>
                             <p class="main__menu__commande__article__detail__prix">18€</p>
                         </div>
                     </div>
@@ -211,7 +216,8 @@
                             Macaron au chocolat d'exception
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Et glace à la vanille de
+                            <p class="main__menu__commande__article__detail__description truncate"> Et glace à la
+                                vanille de
                                 Madagascar </p>
                             <p class="main__menu__commande__article__detail__prix">22€</p>
                         </div>
@@ -230,7 +236,8 @@
                             Mousse au chocolat
                         </h3>
                         <div class="main__menu__commande__article__detail">
-                            <p class="main__menu__commande__article__detail__description"> Au piment d'Espelette et à la
+                            <p class="main__menu__commande__article__detail__description truncate"> Au piment
+                                d'Espelette et à la
                                 truffe noire </p>
                             <p class="main__menu__commande__article__detail__prix">23€</p>
                         </div>
