--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
                             <h3 class="main__restaurants__list__article__text__title">La palette du goût</h3>
                             <p class="main__restaurants__list__article__text__corps">Ménilmontant</p>
                         </div>
-                        <div class="main__restaurants__list__article__footer__icon">
-                            <i class="fa-solid fa-heart main__restaurants__list__article__footer__icon--solid"></i>
-                            <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon--border"></i>
+                        <div class="main__restaurants__list__article__footer__icon favoris">
+                            <i class="far fa-heart favoris__icon">
+                                <i class="fas fa-heart favoris__icon--color"></i>
+                            </i>
                         </div>
 
 
@@ -122,9 +123,10 @@
                             <p class="main__restaurants__list__article__text__corps">Charonne</p>
                         </div>
 
-                        <div class="main__restaurants__list__article__footer__icon">
-                            <i class="fa-solid fa-heart main__restaurants__list__article__footer__icon--solid"></i>
-                            <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon--border"></i>
+                        <div class="main__restaurants__list__article__footer__icon favoris">
+                            <i class="far fa-heart favoris__icon">
+                                <i class="fas fa-heart favoris__icon--color"></i>
+                            </i>
                         </div>
 
                     </div>
@@ -142,9 +144,10 @@
                             <p class="main__restaurants__list__article__text__corps">Cité Rouge</p>
                         </div>
 
-                        <div class="main__restaurants__list__article__footer__icon">
-                            <i class="fa-solid fa-heart main__restaurants__list__article__footer__icon--solid"></i>
-                            <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon--border"></i>
+                        <div class="main__restaurants__list__article__footer__icon favoris">
+                            <i class="far fa-heart favoris__icon">
+                                <i class="fas fa-heart favoris__icon--color"></i>
+                            </i>
                         </div>
 
                     </div>
@@ -162,9 +165,10 @@
                             <p class="main__restaurants__list__article__text__corps">Folie-Méricourt</p>
                         </div>
 
-                        <div class="main__restaurants__list__article__footer__icon">
-                            <i class="fa-solid fa-heart main__restaurants__list__article__footer__icon--solid"></i>
-                            <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon--border"></i>
+                        <div class="main__restaurants__list__article__footer__icon favoris">
+                            <i class="far fa-heart favoris__icon">
+                                <i class="fas fa-heart favoris__icon--color"></i>
+                            </i>
                         </div>
 
                     </div>
