--- a/restaurant/menus/note-enchante.html
+++ b/restaurant/menus/note-enchante.html
@@ -36,7 +36,11 @@
                 <h1 class="main__menu__header__title">
                     La note enchantée
                 </h1>
-                <i class="fa-regular fa-heart main__menu__header__icon"></i>
+                <div class="main__menu__header__icon favoris">
+                    <i class="far fa-heart favoris__icon">
+                        <i class="fas fa-heart favoris__icon--color"></i>
+                    </i>
+                </div>
             </div>
 
             <section class="main__menu__commande">
