--- a/restaurant/menus/palette-du-gout.html
+++ b/restaurant/menus/palette-du-gout.html
@@ -30,13 +30,18 @@
     <main class="main">
         <img src="../../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
             alt="image de la page a la francaise" class="main__image">
+        <div>
         <section class="main__menu">
 
             <div class="main__menu__header">
                 <h1 class="main__menu__header__title">
                     La palette du goût
                 </h1>
-                <i class="fa-regular fa-heart main__menu__header__icon"></i>
+                <div class="main__menu__header__icon favoris">
+                    <i class="far fa-heart favoris__icon">
+                        <i class="fas fa-heart favoris__icon--color"></i>
+                    </i>
+                </div>
             </div>
 
             <section class="main__menu__commande">
@@ -255,6 +260,7 @@
 
             <button class="main__menu__button">Commander</button>
         </section>
+    </div>
 
 
     </main>
