--- a/restaurant/menus/a-la-francaise.html
+++ b/restaurant/menus/a-la-francaise.html
@@ -37,7 +37,11 @@
                 <h1 class="main__menu__header__title">
                     À la française
                 </h1>
-                <i class="fa-regular fa-heart main__menu__header__icon"></i>
+                <div class="main__menu__header__icon favoris">
+                    <i class="far fa-heart favoris__icon">
+                        <i class="fas fa-heart favoris__icon--color"></i>
+                    </i>
+                </div>
             </div>
 
             <section class="main__menu__commande">
