Centrer les titres des pages restaurants

--- a/restaurant/menus/a-la-francaise.html
+++ b/restaurant/menus/a-la-francaise.html
@@ -54,7 +54,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Tartare de poulpe acidulé
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -74,7 +74,7 @@
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Velouté de légumes d'antan
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -95,7 +95,7 @@
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Soupe à l'oignon
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -126,7 +126,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Coquilles Saint-Jacques
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -146,7 +146,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Magret de canard
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -167,7 +167,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Pigeonneau d’Ille-et-Vilaine
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -198,7 +198,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Pétales de violettes glacés
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -217,7 +217,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Fondant au chocolat
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -235,7 +235,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Millefeuille croustillant
                         </h3>
                         <div class="main__menu__commande__article__detail">
