--- a/restaurant/menus/note-enchante.html
+++ b/restaurant/menus/note-enchante.html
@@ -53,7 +53,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Ravioles de foie gras
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -75,7 +75,7 @@
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Caviar osciètre
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -97,7 +97,7 @@
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Homard et espuma de potiron </h3>
                         <div class="main__menu__commande__article__detail">
                             <p class="main__menu__commande__article__detail__description truncate">Marinés aux zestes
@@ -116,7 +116,7 @@
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Foie gras de canard cuit entier </h3>
                         <div class="main__menu__commande__article__detail">
                             <p class="main__menu__commande__article__detail__description truncate">Confiture de figue et
@@ -147,7 +147,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Noix de coquilles Saint-Jacques
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -167,7 +167,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Langoustine poêlée
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -186,7 +186,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Mijoté de queue de bœuf
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -217,7 +217,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Macaron noisette et chocolat
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -238,7 +238,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Baba au rhum revisité
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -258,7 +258,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Tarte au citron meringuée
                         </h3>
                         <div class="main__menu__commande__article__detail">
