--- a/restaurant/menus/delice-des-sens.html
+++ b/restaurant/menus/delice-des-sens.html
@@ -53,7 +53,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Tartare de thon
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -73,7 +73,7 @@
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Bouchée de homard croustillant
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -95,7 +95,7 @@
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Poulet rôti aux herbes de Provence
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -127,7 +127,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Poulet rôti aux herbes de Provence
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -146,7 +146,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Langouste rôtie
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -165,7 +165,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Côte de bœuf Angus
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -195,7 +195,7 @@
                 </div>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Farandole de desserts
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -213,7 +213,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Crème brulée
                         </h3>
                         <div class="main__menu__commande__article__detail">
@@ -231,7 +231,7 @@
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
-                        <h3 class="main__menu__commande__article__title">
+                        <h3 class="main__menu__commande__article__title truncate">
                             Tiramisu
                         </h3>
                         <div class="main__menu__commande__article__detail">
